apps/services/wandb/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wandb
  labels:
    app: wandb
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: wandb
  template:
    metadata:
      labels:
        app: wandb
    spec:
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: wandb
          image: "wandb/local:0.31.1"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data-storage
              mountPath: /vol
          startupProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 600
            failureThreshold: 120
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 600
            failureThreshold: 120
          readinessProbe:
            httpGet:
              path: /ready
              port: http
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
      volumes:
        - name: data-storage
          persistentVolumeClaim:
            claimName: wandb-data
