apps/services/wandb/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wandb
  labels:
    app: wandb
  annotations:
    tailscale.com/hostname: "wandb"
spec:
  selector:
    app: wandb
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  loadBalancerClass: tailscale
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: wandb-internal
  labels:
    app: wandb
spec:
  selector:
    app: wandb
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
